Closed
Bug 877429
Opened 11 years ago
Closed 11 years ago
Maybe remove GlyphMetricsUpdater
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
mozilla24
People
(Reporter: jwatt, Assigned: heycam)
References
Details
Attachments
(1 file)
8.15 KB,
patch
|
longsonr
:
review+
|
Details | Diff | Splinter Review |
The comment in nsSVGTextFrame2::NotifyGlyphMetricsChange seems to imply that the reason for GlyphMetricsUpdater is because of the behavior of nsSVGUtils::InvalidateBounds. That is dead code now though, so maybe we should remove the runner.
Alternatively we should update that comment to say why GlyphMetricsUpdater is still needed.
Assignee | ||
Comment 1•11 years ago
|
||
To test this, we should see if layout/svg/crashtests/841163-1.svg still crashes with GlyphMetricsUpdater removed.
Assignee | ||
Comment 2•11 years ago
|
||
With the better handling of reflow from bug 873806, we don't need to call ScheduleReflowSVG() under a script runner when we're under a DOM mutation.
Try run in progress: https://tbpl.mozilla.org/?tree=Try&rev=3dffa4e13522
Updated•11 years ago
|
Attachment #760261 -
Flags: review?(longsonr) → review+
Assignee | ||
Comment 3•11 years ago
|
||
Comment 4•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in
before you can comment on or make changes to this bug.
Description
•