Bug 877429 - Remove GlyphMetricsUpdater. r=longsonr